--- a/MedHistoryTrackerV2.Services/MedHistoryTrackerV2.Services.csproj
+++ b/MedHistoryTrackerV2.Services/MedHistoryTrackerV2.Services.csproj
@@ -1,9 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MedHistoryTrackerV2.Data\MedHistoryTrackerV2.Data.csproj" />
+    <ProjectReference Include="..\MedHistoryTrackerV2.Repository\MedHistoryTrackerV2.Repository.csproj" />
+  </ItemGroup>
 
 </Project>
